{
    "name": "PlayerControll",
    "maps": [
        {
            "name": "PlayerActionMap",
            "id": "cca2c019-fea3-4bc9-ae99-2bd625ec958e",
            "actions": [
                {
                    "name": "MoveMent",
                    "type": "Value",
                    "id": "2af50fe9-9561-4921-a3cf-1681dfb12149",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Value",
                    "id": "e9a57d10-fe5e-41b9-9aa2-4205f0420f58",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "HoldJump",
                    "type": "Button",
                    "id": "f2334bdb-4a81-4771-a31d-cf07e4e603f5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "379e8c7d-6692-4320-aad1-39202a425feb",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveMent",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "2db512e8-0158-4dc1-bfaf-999938ae66cf",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyBoardScheme",
                    "action": "MoveMent",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6b726fee-51d1-4d09-a829-6d4529db6739",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyBoardScheme",
                    "action": "MoveMent",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ARROW",
                    "id": "85ed4884-b42e-44ea-8665-1f5f3ed9de6c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveMent",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "b3afa623-60c8-47c1-a76f-6622055f2ad8",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyBoardScheme",
                    "action": "MoveMent",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f2a01357-ff49-4831-be91-98b637990fef",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyBoardScheme",
                    "action": "MoveMent",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c3ada75d-ee01-4c6a-b168-b3e19aa9cb88",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyBoardScheme",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "96a0a22d-6fae-41e6-8d42-1023d3b37cd5",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyBoardScheme",
                    "action": "HoldJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "keyBoardScheme",
            "bindingGroup": "keyBoardScheme",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}